<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/change_d"
        app:showAsAction="never"
        android:title="Details"
        android:icon="@drawable/ic_user"/>


        <item android:id="@+id/change_loc"
                android:title="@string/change_l"
                android:icon="@drawable/ic_pin"
            app:showAsAction="withText"/>

        <item android:id="@+id/change_menu"
            android:title="@string/change_menu"
            android:icon="@drawable/ic_fast_food"
            app:showAsAction="withText"/>

        <item android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"
            app:showAsAction="withText"/>

</menu>