<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_margin="@dimen/cardview_compat_inset_shadow">

        <RelativeLayout
            android:background="@drawable/item_background"
            android:layout_width= "match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/theImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/back_ground" />

            <TextView
                android:id="@+id/resname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/theImage"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="Title" />

            <TextView
                android:id="@+id/freeseats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_seats"
                android:layout_below="@+id/resname"
                android:layout_toEndOf="@id/theImage"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/freeseats"
                android:layout_toEndOf="@+id/theImage"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/distance"/>

            <Button
                android:id="@+id/showme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/showMe"
                android:layout_below="@id/freeseats"
                android:drawableRight="@drawable/my_loc" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>